2007-12-17  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (get_package_list_with_cont): Mark the package list
	as NOT ready and only set next_packages_for_info to NULL before
	clearing the packages and sections lists, and not only for the
	APTSTATE_DEFAULT state.
	(gpi_reply): Don't check out whether the package list is ready or
	not, the next_packages_for_info variable set to NULL together with
	the proper use of ref() and unref() functions is just enough.
	(get_next_package_info): Don't check out the package_list_ready
	variable, next_packages_for_info variable set to NULL is enough.

	* src/main.cc (get_package_list_reply_default): Mark package list
	as ready right after building the new list, not later (N76904).
	(get_package_list_reply): Don't mark the packages list as ready
	here, it could be too late (N76904).
	(get_package_list_with_cont): Mark the package list as NOT ready
	and reset some global variables before clearing the packages and
	sections lists (N76904).
	(gpi_reply): Check out whether the package list is ready or not to
	access its package_info structs both for read or write (N76904).
	(get_next_package_info): Only call to call_with_package_info if
	the packages list is ready (N76904).

2007-12-14  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (emit_row_changed): Removed a call to
	gtk_tree_path_free that was leading to an invalid read.
	(update_packages_list_selection): Free the GtkTreePath here,
	inside the callback for "row-changed", to avoid the invalid read.

2007-12-14  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.3
	
	Fix soft removal algorithm: don't check whether a package is
	needed when marking it for removal, check later once the whole
	operation is known.  This makes it possible to Conflict/Replace
	packages that are originally needed by other packages but can in
	fact be removed since the other packages will be upgraded or
	removed as well.
		